# GammaOSCoreDistribution

./: .gitattributes  README.md  build.sh  upload.sh
device/generic/goldfish-opengl/: Android.mk  BUILD.gn  CMakeLists.txt  GNUmakefile  METADATA  OWNERS  cmake_transform.py  meson.build  meson_options.txt
device/generic/goldfish-opengl/android-emu/: CMakeLists.txt
device/generic/goldfish-opengl/fuchsia/: meson.build  port.cc
device/generic/goldfish-opengl/shared/: meson.build
device/generic/goldfish-opengl/shared/GoldfishAddressSpace/: Android.bp  Android.mk  CMakeLists.txt  meson.build
device/generic/goldfish-opengl/shared/OpenglCodecCommon/: Android.mk  CMakeLists.txt  EncoderDebug.cpp  EncoderDebug.h  GLClientState.cpp  GLClientState.h  GLESTextureUtils.cpp  GLESTextureUtils.h  GLSharedGroup.cpp  GLSharedGroup.h  StateTrackingSupport.h  TextureSharedData.h  glUtils.h  meson.build
device/generic/goldfish-opengl/shared/gralloc_cb/: CMakeLists.txt
device/generic/goldfish-opengl/shared/qemupipe/: CMakeLists.txt  meson.build  qemu_pipe_guest.cpp
device/generic/goldfish-opengl/system/: meson.build
device/generic/goldfish-opengl/system/GLESv1/: CMakeLists.txt
device/generic/goldfish-opengl/system/GLESv1_enc/: CMakeLists.txt  gl_enc.cpp
device/generic/goldfish-opengl/system/GLESv2/: CMakeLists.txt
device/generic/goldfish-opengl/system/GLESv2_enc/: CMakeLists.txt  GL2Encoder.cpp  GLESv2Validation.cpp  gl2_enc.cpp
device/generic/goldfish-opengl/system/OpenglSystemCommon/: AddressSpaceStream.cpp  AddressSpaceStream.h  CMakeLists.txt  EGLImage.h  HostConnection.cpp  HostConnection.h  ProcessPipe.cpp  ProcessPipe.h  QemuPipeStream.h  QemuPipeStreamFuchsia.cpp  VirtioGpuPipeStream.cpp  VirtioGpuPipeStream.h  VirtioGpuStream.cpp  VirtioGpuStream.h  address_space_graphics_types.h  meson.build
device/generic/goldfish-opengl/system/egl/: CMakeLists.txt  egl.cpp  eglDisplay.cpp  eglDisplay.h  goldfish_sync.h
device/generic/goldfish-opengl/system/gralloc/: CMakeLists.txt
device/generic/goldfish-opengl/system/hals/: allocator3.cpp  mapper3.cpp
device/generic/goldfish-opengl/system/hwc2/: Android.mk  ClientComposer.cpp  ClientComposer.h  Common.cpp  Common.h  Composer.h  Device.cpp  Device.h  Display.cpp  Display.h  DisplayConfig.cpp  DisplayConfig.h  DisplayFinder.cpp  DisplayFinder.h  DrmPresenter.cpp  DrmPresenter.h  FencedBuffer.h  GuestComposer.cpp  GuestComposer.h  HostComposer.cpp  HostComposer.h  HostUtils.h  Layer.cpp  NoOpComposer.cpp  NoOpComposer.h
device/generic/goldfish-opengl/system/hwc3/: Android.mk  ClientFrameComposer.cpp  ClientFrameComposer.h  Common.cpp  Common.h  Composer.cpp  Composer.h  ComposerClient.cpp  ComposerClient.h  ComposerResources.cpp  Device.cpp  Device.h  Display.cpp  Display.h  DisplayFinder.cpp  DisplayFinder.h  Drm.cpp  Drm.h  DrmPresenter.cpp  DrmPresenter.h  FrameComposer.h  Gralloc.cpp  Gralloc.h  GuestFrameComposer.cpp  GuestFrameComposer.h  HostFrameComposer.cpp  HostFrameComposer.h  HostUtils.cpp  Layer.cpp  Layer.h  LruCache.h  Main.cpp  NoOpFrameComposer.h  Time.h  VsyncThread.cpp  VsyncThread.h  hwc3.rc  hwc3.xml
device/generic/goldfish-opengl/system/profiler/: CMakeLists.txt
device/generic/goldfish-opengl/system/renderControl_enc/: CMakeLists.txt  meson.build  renderControl_client_context.h  renderControl_enc.cpp
device/generic/goldfish-opengl/system/vulkan/: CMakeLists.txt  goldfish_vulkan.cpp
device/generic/goldfish-opengl/system/vulkan_enc/: Android.mk  AndroidHardwareBuffer.cpp  CMakeLists.txt  CommandBufferStagingStream.cpp  DescriptorSetVirtualization.cpp  HostVisibleMemoryVirtualization.cpp  Resources.h  (+25 more)
device/generic/vulkan-cereal/: .clang-format  Android.bp  CMakeLists.txt  METADATA  test_properties.cmake
device/generic/vulkan-cereal/base/: Android.bp  BumpPool.h  CMakeLists.txt  Metrics.h  MetricsNoOp.cpp  Optional.h  SharedLibrary.cpp  SharedLibrary.h  StringUtils.cpp  System.cpp  ThreadPool.h  WorkerThread.h
device/generic/vulkan-cereal/host-common/: Android.bp  AndroidPipe.cpp  AndroidPipe.h  CMakeLists.txt  FeatureControlDefHost.h  GfxstreamFatalError.cpp  GfxstreamFatalError.h  GfxstreamFatalError_unittest.cpp  HostAddressSpace_unittest.cpp  HostmemIdMapping.cpp  HostmemIdMapping.h  HostmemIdMapping_unittest.cpp  MediaVpxDecoder.cpp  MediaVpxDecoder.h  RefcountPipe.cpp  RefcountPipe.h  RenderDoc.h  RenderDoc_unittest.cpp  address_space_device.cpp  address_space_device.h  address_space_graphics.cpp  address_space_graphics_unittests.cpp  logging.cpp  logging.h  logging_unittest.cpp  opengles.cpp  opengles.h  vm_operations.h
device/generic/vulkan-cereal/scripts/: gen-entries.py  generate-apigen-sources.sh  generate-dispatch-headers.sh
device/generic/vulkan-cereal/snapshot/: TextureLoader.cpp  TextureLoader.h  TextureSaver.cpp  TextureSaver.h  common.h  interface.h
device/generic/vulkan-cereal/stream-servers/: Android.bp  CMakeLists.txt  ChannelStream.cpp  ColorBuffer.cpp  ColorBuffer.h  CompositorVk.cpp  CompositorVk.h  Debug.cpp  Debug.h  DisplayVk.cpp  DisplayVk.h  FrameBuffer.cpp  FrameBuffer.h  FrameworkFormats.h  GfxStreamAgents.cpp  GfxStreamBackend.cpp  GfxStreamBackend.h  IOStream.h  PostCommands.h  PostWorker.cpp  PostWorker.h  ReadBuffer.cpp  ReadBuffer.h  ReadbackWorker.cpp  RenderContext.cpp  RenderControl.cpp  RenderThread.cpp  RenderThreadInfo.h  RendererImpl.cpp  RingStream.cpp  SwapChainStateVk.cpp  SwapChainStateVk.h  SyncThread.cpp  SyncThread.h  TextureResize.cpp  VirtioGpuTimelines.cpp  VirtioGpuTimelines.h  WindowSurface.cpp  YUVConverter.cpp  YUVConverter.h  (+6 more)
prebuilts/build-tools/: Android.bp  BUILD.bazel  METADATA  build-prebuilts.sh  manifest.xml  update-prebuilts.sh
prebuilts/build-tools/darwin-x86/lib64/: libbase.dylib  libc++.dylib  libcrypto-host.dylib  libicui18n-host.dylib  libicuuc-host.dylib  liblog.dylib  libsqlite.dylib  libz-host.dylib  libziparchive.dylib
prebuilts/clang/host/linux-x86/: Android.bp  BUILD.bazel  README.md  cc_toolchain_config.bzl  cc_toolchain_constants.bzl  cc_toolchain_features.bzl
prebuilts/sdk/tools/: Android.bp  BUILD.bazel
(+288220 files in other folders)
