load("@bazel_tools//tools/python:toolchain.bzl", "py_runtime_pair")

package(default_visibility = ["//visibility:public"])

[filegroup(
    name = platform,
    srcs = glob([
        "common/**",
        "%s/bin/*" % platform,
        "%s/lib64/*" % platform,
    ]),
) for platform in ("linux-x86", "darwin")]

py_runtime(
    name = "python2",
    files = ["linux-x86/bin/py2-cmd"],
    interpreter = "linux-x86/bin/py2-cmd",
    python_version = "PY2",
)

py_runtime(
    name = "python3",
    files = ["linux-x86/bin/py3-cmd"],
    interpreter = "linux-x86/bin/py3-cmd",
    python_version = "PY3",
)

py_runtime_pair(
    name = "py_runtime_pair",
    py2_runtime = ":python2",
    py3_runtime = ":python3",
)

toolchain(
    name = "py_toolchain",
    toolchain = ":py_runtime_pair",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)
