# Copyright 2022 Android Open Source Project
# SPDX-License-Identifier: MIT

inc_opengl_system = include_directories('OpenglSystemCommon')
inc_render_enc = include_directories('renderControl_enc')
inc_vulkan_enc = include_directories('vulkan_enc')

subdir('vulkan_enc')
subdir('renderControl_enc')
subdir('OpenglSystemCommon')
subdir('vulkan')
